实现了用户退出登陆接口
