# docs/swagger.yaml
@@ -18,14 +18,10 @@ definitions:
   api.CurrentUserDetailResp:
     properties:
       message:
-        description: |-
-          required: true
-          example: 登陆成功
+        description: 'required: true'
         type: string
       statusCode:
-        description: |-
-          required: true
-          example: 0
+        description: 'required: true'
         type: integer
       userInfoV0:
         $ref: '#/definitions/api.UserInfoV0'
@@ -78,6 +74,15 @@ definitions:
         description: 用户角色：user/admin
         type: string
     type: object
+  api.UserLoginOutResp:
+    properties:
+      message:
+        description: 'required: true'
+        type: string
+      statusCode:
+        description: 'required: true'
+        type: integer
+    type: object
   api.UserLoginReq:
     properties:
       account:
@@ -110,14 +115,10 @@ definitions:
   api.UserRegisterResp:
     properties:
       message:
-        description: |-
-          required: true
-          example: 登陆成功
+        description: 'required: true'
         type: string
       statusCode:
-        description: |-
-          required: true
-          example: 0
+        description: 'required: true'
         type: integer
     type: object
 host: localhost:8080
@@ -231,6 +232,24 @@ paths:
           schema:
             $ref: '#/definitions/api.UserLoginResp'
       summary: 用户登陆接口
+      tags:
+      - user
+  /user/loginOut:
+    post:
+      description: 用户自身详情接口
+      parameters:
+      - in: query
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.UserLoginOutResp'
+      summary: 用户退出登陆接口
       tags:
       - user
   /user/register:
